@@ -22,3 +22,4 @@ end
 
 require 'gecoder/interface/constraints/set/domain'
 require 'gecoder/interface/constraints/set/relation'
+require 'gecoder/interface/constraints/set/cardinality'
